--- a/eng/pipelines/common/buildandtest.yml
+++ b/eng/pipelines/common/buildandtest.yml
@@ -61,6 +61,7 @@ steps:
               -restore -build
               -configuration ${{ parameters.buildConfig }}
               /p:ArchiveTests=true
+              /p:TreatWarningsAsErrors=false
               /bl:${{ parameters.repoLogPath }}build.binlog
               $(_OfficialBuildIdArgs)
       displayName: 🛠️ Build
