--- a/eng/pipelines/maui-release-internal.yml
+++ b/eng/pipelines/maui-release-internal.yml
@@ -181,7 +181,9 @@ extends:
                 value: Release
               - name: _BuildOfficalId
                 value: $[ format('{0}.{1}', format('{0:yyyyMMdd}', pipeline.startTime), counter(format('{0:yyyyMMdd}', pipeline.startTime), 1) )]
-                
+              - name: TreatWarningsAsErrors
+                value: false
+            
             preSteps:
               - checkout: self
                 fetchDepth: 1
