--- a/eng/pipelines/common/buildandtest.yml
+++ b/eng/pipelines/common/buildandtest.yml
@@ -129,5 +129,5 @@ steps:
               -configuration ${{ parameters.buildConfig }}
               /bl:${{ parameters.repoLogPath }}/pack.binlog
               /p:Restore=false /p:Build=false
-              $(_OfficialBuildArgs)
+              $(_OfficialBuildIdArgs)
       displayName: Pack, Sign & Publish
