--- a/NuGet.config
+++ b/NuGet.config
@@ -4,6 +4,8 @@
   <!-- `clear` ensures no additional sources are inherited from another config file. -->
   <packageSources>
     <clear />
+    <add key="local" value="LOCAL_PLACEHOLDER" />
+    <add key="nuget-only" value="NUGET_ONLY_PLACEHOLDER" />
     <add key="dotnet-tools" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json" protocolVersion="3" />
     <add key="dotnet-eng" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-eng/nuget/v3/index.json" protocolVersion="3" />
     <add key="dotnet-public" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-public/nuget/v3/index.json" protocolVersion="3" />
@@ -29,5 +31,48 @@
   <activePackageSource>
     <add key="All" value="(Aggregate source)" />
   </activePackageSource>
-  <disabledPackageSources />
+  <disabledPackageSources>
+    <add key="local" value="true" />
+    <add key="nuget-only" value="true" />
+  </disabledPackageSources>
+  <!-- Define mappings by adding package patterns beneath the target source. -->
+  <!-- Some packages will restore from different locations, but most will be from `dotnet-public`. -->
+  <!-- The key value for <packageSource> should match key values from <packageSources> element. -->
+  <packageSourceMapping>
+    <packageSource key="local">
+      <package pattern="Microsoft.Maui.*" />
+      <package pattern="Microsoft.AspNetCore.Components.WebView.*" />
+    </packageSource>
+    <packageSource key="nuget-only">
+      <package pattern="Microsoft.Maui.*" />
+      <package pattern="Microsoft.AspNetCore.Components.WebView.*" />
+    </packageSource>
+    <!-- <packageSource key="dotnet-tools">
+    </packageSource> -->
+    <packageSource key="dotnet-eng">
+      <package pattern="microsoft.dotnet.*" />
+      <package pattern="Microsoft.DiaSymReader.*" />
+    </packageSource>
+    <packageSource key="dotnet-public">
+      <package pattern="*" />
+      <package pattern="Microsoft.DotNet.PlatformAbstractions" />
+      <package pattern="Microsoft.Maui.*" />
+      <package pattern="Microsoft.AspNetCore.Components.WebView.*" />
+      <package pattern="Microsoft.DotNet.ILCompiler" />
+    </packageSource>
+    <!-- <packageSource key="benchmark-dotnet-prerelease">
+    </packageSource> -->
+    <packageSource key="skiasharp">
+      <package pattern="_NativeAssets.*" />
+    </packageSource>
+    <packageSource key="dotnet9-transport">
+      <package pattern="*WorkloadBuildTasks*" />
+    </packageSource>
+    <packageSource key="dotnet-libraries">
+      <package pattern="System.CommandLine" />
+    </packageSource>
+    <packageSource key="vssdk">
+      <package pattern="microsoft.visualstudio.texttemplating.*" />
+    </packageSource>
+  </packageSourceMapping>
 </configuration>
