try these feeds

--- a/NuGet.config
+++ b/NuGet.config
@@ -18,8 +18,8 @@
     <add key="dotnet-libraries" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-libraries/nuget/v3/index.json" />
     <add key="dotnet-libraries-transport" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-libraries-transport/nuget/v3/index.json" />
     <add key="vs-buildservices" value="https://pkgs.dev.azure.com/azure-public/vside/_packaging/vs-buildservices/nuget/v3/index.json" />
-    <add key="dotnet9" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet9/nuget/v3/index.json" />
-    <add key="dotnet9-transport" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet9-transport/nuget/v3/index.json" />
+    <add key="dotnet8" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet8/nuget/v3/index.json" />
+    <add key="dotnet8-transport" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet8-transport/nuget/v3/index.json" />
   </packageSources>
   <activePackageSource>
     <add key="All" value="(Aggregate source)" />
@@ -45,6 +45,10 @@
     <packageSource key="dotnet-eng">
       <package pattern="microsoft.dotnet.*" />
       <package pattern="Microsoft.DiaSymReader.*" />
+      <package pattern="MicroBuild.Core.Sentinel*" />
+      <package pattern="Microsoft.Signed.Wix*" />
+      <package pattern="Microsoft.SymbolUploader.Build.Task*" />
+      <package pattern="sn" />
     </packageSource>
     <packageSource key="dotnet-public">
       <package pattern="*" />
@@ -58,14 +62,14 @@
     <packageSource key="skiasharp">
       <package pattern="_NativeAssets.*" />
     </packageSource>
-    <packageSource key="dotnet9-transport">
+    <packageSource key="dotnet8-transport">
       <package pattern="*WorkloadBuildTasks*" />
     </packageSource>
     <packageSource key="dotnet-libraries">
       <package pattern="System.CommandLine" />
     </packageSource>
-    <packageSource key="vssdk">
-      <package pattern="microsoft.visualstudio.texttemplating.*" />
+    <packageSource key="dotnet8">
+      <package pattern="*" />
     </packageSource>
   </packageSourceMapping>
 </configuration>
