try these feeds

--- a/NuGet.config
+++ b/NuGet.config
@@ -52,6 +52,10 @@
     <packageSource key="dotnet-eng">
       <package pattern="microsoft.dotnet.*" />
       <package pattern="Microsoft.DiaSymReader.*" />
+      <package pattern="MicroBuild.Core.Sentinel*" />
+      <package pattern="Microsoft.Signed.Wix*" />
+      <package pattern="Microsoft.SymbolUploader.Build.Task*" />
+      <package pattern="sn" />
     </packageSource>
     <packageSource key="dotnet-public">
       <package pattern="*" />
@@ -65,14 +69,14 @@
     <packageSource key="skiasharp">
       <package pattern="_NativeAssets.*" />
     </packageSource>
-    <packageSource key="dotnet9-transport">
+    <packageSource key="dotnet8-transport">
       <package pattern="*WorkloadBuildTasks*" />
     </packageSource>
     <packageSource key="dotnet-libraries">
       <package pattern="System.CommandLine" />
     </packageSource>
-    <packageSource key="vssdk">
-      <package pattern="microsoft.visualstudio.texttemplating.*" />
+    <packageSource key="dotnet8">
+      <package pattern="*" />
     </packageSource>
   </packageSourceMapping>
 </configuration>
