--- a/NuGet.config
+++ b/NuGet.config
@@ -25,8 +25,8 @@
     
     <add key="dotnet-libraries" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-libraries/nuget/v3/index.json" />
     <add key="dotnet-libraries-transport" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-libraries-transport/nuget/v3/index.json" />
-    <add key="vs-buildservices" value="https://pkgs.dev.azure.com/azure-public/vside/_packaging/vs-buildservices/nuget/v3/index.json" />
   
+    <!-- <add key="vs-buildservices" value="https://pkgs.dev.azure.com/azure-public/vside/_packaging/vs-buildservices/nuget/v3/index.json" /> -->
   </packageSources>
   <activePackageSource>
     <add key="All" value="(Aggregate source)" />
@@ -75,8 +75,8 @@
     <packageSource key="dotnet-libraries">
       <package pattern="System.CommandLine" />
     </packageSource>
-    <packageSource key="dotnet8">
+    <!-- <packageSource key="dotnet8">
       <package pattern="*" />
-    </packageSource>
+    </packageSource> -->
   </packageSourceMapping>
 </configuration>
