--- a/eng/pipelines/common/localization-handback.yml
+++ b/eng/pipelines/common/localization-handback.yml
@@ -5,10 +5,41 @@ stages:
     dependsOn: []
     condition: and(succeeded(), eq(variables.isLocBranch, true))
 
+    parameters:
+      # # Optional: dependencies of the job
+      # dependsOn: ''
+
+      # # Optional: A defined YAML pool - https://docs.microsoft.com/en-us/azure/devops/pipelines/yaml-schema?view=vsts&tabs=schema#pool
+      # pool: ''
+        
+      CeapexPat: $(dn-bot-ceapex-package-r) # PAT for the loc AzDO instance https://dev.azure.com/ceapex
+      GithubPat: $(BotAccount-dotnet-bot-repo-PAT)
+
+      SourcesDirectory: $(Build.SourcesDirectory)
+      CreatePr: true
+      AutoCompletePr: false
+      ReusePr: true
+      UseLfLineEndings: true
+      UseCheckedInLocProjectJson: false
+      SkipLocProjectJsonGeneration: false
+      LanguageSet: VS_Main_Languages
+      LclSource: lclFilesInRepo
+      LclPackageId: ''
+      RepoType: gitHub
+      GitHubOrg: dotnet
+      MirrorRepo: ''
+      MirrorBranch: main
+      condition: ''
+      JobNameSuffix: ''
+
     jobs:
       - job : generate_resx
         displayName: 'Process incoming translations'
         pool:  $(HostedWinVS2019)
+
+        variables:
+          - group: OneLocBuildVariables # Contains the CeapexPat and GithubPat
+
         steps:
           - checkout: self
             persistCredentials: true
@@ -41,20 +72,41 @@ stages:
               Invoke-Git merge origin/$(LOC_BRANCH_NAME) --no-commit
             displayName: 'Merge loc Branch'
 
-          - task: cesve.one-loc-build.one-loc-build.OneLocBuild@2
-            displayName: 'Localization Build'
+          # - task: cesve.one-loc-build.one-loc-build.OneLocBuild@2
+          #   displayName: 'Localization Build'
+          #   env:
+          #     SYSTEM_ACCESSTOKEN: $(System.AccessToken) 
+          #   inputs:
+          #     locProj: 'eng/automation/LocProject.json'
+          #     outDir: '$(Build.ArtifactStagingDirectory)'
+          #     packageSourceAuth: patAuth
+          #     patVariable: "$(OneLocBuildPAT)"
+          #     isCreatePrSelected: false
+          #     repoType: gitHub
+          #     prSourceBranchPrefix: $(LocBranchPrefix)
+          #     gitHubPatVariable: '$(GitHub.Token)'
+          #     gitHubPrMergeMethod: merge
+
+          - task: OneLocBuild@2
+            displayName: OneLocBuild
             env:
-              SYSTEM_ACCESSTOKEN: $(System.AccessToken) 
+              SYSTEM_ACCESSTOKEN: $(System.AccessToken)
             inputs:
-              locProj: 'eng/automation/LocProject.json'
-              outDir: '$(Build.ArtifactStagingDirectory)'
+              locProj: eng/Localize/LocProject.json
+              outDir: $(Build.ArtifactStagingDirectory)
+              lclSource: ${{ parameters.LclSource }}
+              lclPackageId: ${{ parameters.LclPackageId }}
+              isCreatePrSelected: ${{ parameters.CreatePr }}
+              isAutoCompletePrSelected: ${{ parameters.AutoCompletePr }}
+              ${{ if eq(parameters.CreatePr, true) }}:
+                isUseLfLineEndingsSelected: ${{ parameters.UseLfLineEndings }}
+                ${{ if eq(parameters.RepoType, 'gitHub') }}:
+                  isShouldReusePrSelected: ${{ parameters.ReusePr }}
               packageSourceAuth: patAuth
-              patVariable: "$(OneLocBuildPAT)"
-              isCreatePrSelected: false
-              repoType: gitHub
-              prSourceBranchPrefix: $(LocBranchPrefix)
-              gitHubPatVariable: '$(GitHub.Token)'
-              gitHubPrMergeMethod: merge
+              patVariable: ${{ parameters.CeapexPat }}
+              ${{ if eq(parameters.RepoType, 'gitHub') }}:
+                repoType: ${{ parameters.RepoType }}
+                gitHubPatVariable: "${{ parameters.GithubPat }}"
 
           - powershell: |
               #-- Import Invoke-Git Module function
