--- a/eng/pipelines/handlers.yml
+++ b/eng/pipelines/handlers.yml
@@ -296,12 +296,12 @@ stages:
   #   - template: common/localization-handback.yml                    # Process incoming translations and Create PR to main [Localization Handback]
   #   - template: common/merge-translations-update.yml                # Validating incoming translations strings and merge PR [Localization Handback]
   
-  # - template: common/localization-handoff.yml                     # Process outgoing strings [Localization Handoff]
+  - template: common/localization-handoff.yml                     # Process outgoing strings [Localization Handoff]
   # - template: common/localization-handback.yml                    # Process incoming translations and Create PR to main [Localization Handback]
   # - template: common/merge-translations-update.yml                # Validating incoming translations strings and merge PR [Localization Handback]
 
-  - stage: Localization
-    jobs:
+  # - stage: Localization
+  #   jobs:
       # - template: /eng/common/templates-official/job/onelocbuild.yml@self
       #   parameters:
       #     # LclSource: lclFilesfromPackage
@@ -311,7 +311,7 @@ stages:
       #     MirrorRepo: ''
       #     MirrorBranch: main
 
-      - template: common/localization-handoff.yml                     # Process outgoing strings [Localization Handoff]
+      # - template: common/localization-handoff.yml                     # Process outgoing strings [Localization Handoff]
 
 
       # SkipLocProjectJsonGeneration: true
