--- a/eng/pipelines/common/localization-handoff.yml
+++ b/eng/pipelines/common/localization-handoff.yml
@@ -6,7 +6,7 @@ stages:
   - stage: localization_handoff
     displayName: Localization Handoff
     dependsOn: []
-    condition: and(succeeded(), eq(variables.isLocHandoffBranch, true))
+    # condition: and(succeeded(), eq(variables.isLocHandoffBranch, true))
 
     jobs:
       - job : generate_lci
