--- a/eng/pipelines/handlers.yml
+++ b/eng/pipelines/handlers.yml
@@ -297,7 +297,7 @@ stages:
   #   - template: common/merge-translations-update.yml                # Validating incoming translations strings and merge PR [Localization Handback]
   
   - template: common/localization-handoff.yml                     # Process outgoing strings [Localization Handoff]
-  # - template: common/localization-handback.yml                    # Process incoming translations and Create PR to main [Localization Handback]
+  - template: common/localization-handback.yml                    # Process incoming translations and Create PR to main [Localization Handback]
   # - template: common/merge-translations-update.yml                # Validating incoming translations strings and merge PR [Localization Handback]
 
   # - stage: Localization
