--- a/eng/Tools.props
+++ b/eng/Tools.props
@@ -6,7 +6,7 @@
     <!-- <MSBuild Projects="$(RepoRoot)src/DotNet/DotNet.csproj"
         Targets="Build" /> -->
      <Exec
-        Command="dotnet build $(RepoRoot)src\DotNet\DotNet.csproj -p:InstallDotNet=false"
+        Command="dotnet build $(RepoRoot)src/DotNet/DotNet.csproj -p:InstallDotNet=false"
         WorkingDirectory="$(RepoRoot)"
         EnvironmentVariables="DOTNET_MULTILEVEL_LOOKUP=0" />
   </Target>
