--- a/.gitignore
+++ b/.gitignore
@@ -377,3 +377,4 @@ Directory.Build.Override.props
 # Only the "snapshots" directory should be added to Git, not the "snapshots-diff" directory
 snapshots-diff/
 .dotnet
+temp
