--- a/eng/pipelines/common/localization-handoff.yml
+++ b/eng/pipelines/common/localization-handoff.yml
@@ -6,7 +6,7 @@ stages:
   - stage: localization_handoff
     displayName: Localization Handoff
     dependsOn: []
-    # condition: and(succeeded(), eq(variables.isLocHandoffBranch, true))
+    condition: and(succeeded(), eq(variables.isLocHandoffBranch, true))
 
     jobs:
       - job : generate_lci
@@ -17,17 +17,6 @@ stages:
           - group: OneLocBuildVariables # Contains the CeapexPat and GithubPat
 
         steps:
-
-          # - task: cesve.one-loc-build.one-loc-build.OneLocBuild@2
-          #   displayName: 'Localization Build'
-          #   env:
-          #     SYSTEM_ACCESSTOKEN: $(System.AccessToken) 
-          #   inputs:
-          #     locProj: 'eng/automation/LocProject.json'
-          #     outDir: '$(Build.ArtifactStagingDirectory)'
-          #     packageSourceAuth: patAuth
-          #     patVariable: "$(OneLocBuildPAT)"
-
           - task: OneLocBuild@2
             displayName: 'Localization Build'
             env:
@@ -35,19 +24,8 @@ stages:
             inputs:
               locProj: eng/automation/LocProject.json
               outDir: $(Build.ArtifactStagingDirectory)
-              # lclSource: ${{ parameters.LclSource }}
-              # lclPackageId: ${{ parameters.LclPackageId }}
-              # isCreatePrSelected: ${{ parameters.CreatePr }}
-              # isAutoCompletePrSelected: ${{ parameters.AutoCompletePr }}
-              # ${{ if eq(parameters.CreatePr, true) }}:
-              #   isUseLfLineEndingsSelected: ${{ parameters.UseLfLineEndings }}
-              #   ${{ if eq(parameters.RepoType, 'gitHub') }}:
-              #     isShouldReusePrSelected: ${{ parameters.ReusePr }}
               packageSourceAuth: patAuth
               patVariable: ${{ parameters.CeapexPat }}
-              # ${{ if eq(parameters.RepoType, 'gitHub') }}:
-              #   repoType: ${{ parameters.RepoType }}
-              #   gitHubPatVariable: "${{ parameters.GithubPat }}"
 
           - task: PublishBuildArtifacts@1
             inputs:
