--- a/eng/pipelines/common/localization-handoff.yml
+++ b/eng/pipelines/common/localization-handoff.yml
@@ -20,10 +20,10 @@ stages:
           - task: OneLocBuild@2
             displayName: 'Localization Build'
             env:
-              SYSTEM_ACCESSTOKEN: $(System.AccessToken)
+              SYSTEM_ACCESSTOKEN: $(System.AccessToken) 
             inputs:
-              locProj: eng/automation/LocProject.json
-              outDir: $(Build.ArtifactStagingDirectory)
+              locProj: 'eng/automation/LocProject.json'
+              outDir: '$(Build.ArtifactStagingDirectory)'
               packageSourceAuth: patAuth
               patVariable: ${{ parameters.CeapexPat }}
 
