--- a/eng/common/templates-official/job/onelocbuild.yml
+++ b/eng/common/templates-official/job/onelocbuild.yml
@@ -32,32 +32,6 @@ jobs:
 
   displayName: OneLocBuild${{ parameters.JobNameSuffix }}
 
-  pool:
-    # We don't use the collection uri here because it might vary (.visualstudio.com vs. dev.azure.com)
-    ${{ if eq(variables['System.TeamProject'], 'DevDiv') }}:
-      name: VSEngSS-MicroBuild2022-1ES
-      demands: Cmd
-    # If it's not devdiv, it's dnceng
-    ${{ if ne(variables['System.TeamProject'], 'DevDiv') }}:
-      name: NetCore1ESPool-Publishing-Internal
-      demands: ImageOverride -equals windows.vs2019.amd64
-
-  # ${{ if ne(parameters.pool, '') }}:
-  #   pool: ${{ parameters.pool }}
-  # ${{ if eq(parameters.pool, '') }}:
-  #   pool:
-  #     # We don't use the collection uri here because it might vary (.visualstudio.com vs. dev.azure.com)
-  #     ${{ if eq(variables['System.TeamProject'], 'DevDiv') }}:
-  #       name: AzurePipelines-EO
-  #       image: 1ESPT-Windows2022
-  #       demands: Cmd
-  #       os: windows
-  #     # If it's not devdiv, it's dnceng
-  #     ${{ if ne(variables['System.TeamProject'], 'DevDiv') }}:
-  #       name: $(DncEngInternalBuildPool)
-  #       image: 1es-windows-2022
-  #       os: windows
-
   variables:
     - group: OneLocBuildVariables # Contains the CeapexPat and GithubPat
     - name: _GenerateLocProjectArguments
@@ -68,6 +42,22 @@ jobs:
       - name: _GenerateLocProjectArguments
         value: ${{ variables._GenerateLocProjectArguments }} -UseCheckedInLocProjectJson
     - template: /eng/common/templates-official/variables/pool-providers.yml
+
+  ${{ if ne(parameters.pool, '') }}:
+    pool: ${{ parameters.pool }}
+  ${{ if eq(parameters.pool, '') }}:
+    pool:
+      # We don't use the collection uri here because it might vary (.visualstudio.com vs. dev.azure.com)
+      ${{ if eq(variables['System.TeamProject'], 'DevDiv') }}:
+        name: AzurePipelines-EO
+        image: 1ESPT-Windows2022
+        demands: Cmd
+        os: windows
+      # If it's not devdiv, it's dnceng
+      ${{ if ne(variables['System.TeamProject'], 'DevDiv') }}:
+        name: $(DncEngInternalBuildPool)
+        image: 1es-windows-2022
+        os: windows
 
   steps:
     - ${{ if ne(parameters.SkipLocProjectJsonGeneration, 'true') }}:
@@ -105,7 +95,7 @@ jobs:
           mirrorBranch: ${{ parameters.MirrorBranch }}
       condition: ${{ parameters.condition }}
 
-    - task: PublishBuildArtifacts@1
+    - task: 1ES.PublishBuildArtifacts@1
       displayName: Publish Localization Files
       inputs:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)/loc'
@@ -113,28 +103,10 @@ jobs:
         ArtifactName: Loc
       condition: ${{ parameters.condition }}
 
-    - task: PublishBuildArtifacts@1
+    - task: 1ES.PublishBuildArtifacts@1
       displayName: Publish LocProject.json
       inputs:
         PathtoPublish: '$(Build.SourcesDirectory)/eng/Localize/'
         PublishLocation: Container
         ArtifactName: Loc
       condition: ${{ parameters.condition }}
-
-    # - template: /eng/common/core-templates/steps/publish-build-artifacts.yml
-    #   parameters:
-    #     args:
-    #       displayName: Publish Localization Files
-    #       pathToPublish: '$(Build.ArtifactStagingDirectory)/loc'
-    #       publishLocation: Container
-    #       artifactName: Loc
-    #       condition: ${{ parameters.condition }}
-
-    # - template: /eng/common/core-templates/steps/publish-build-artifacts.yml
-    #   parameters:
-    #     args:
-    #       displayName: Publish LocProject.json
-    #       pathToPublish: '$(Build.SourcesDirectory)/eng/Localize/'
-    #       publishLocation: Container
-    #       artifactName: Loc
-    #       condition: ${{ parameters.condition }}
